--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,9 +41,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --prefer-offline
       - run: |
-          echo "Log level: ${{ inputs.logLevel }}"
-          echo "Tags: ${{ inputs.tags }}"
-          echo "Tag: ${{ inputs.tag }}"
+          echo "Log level: ${{ github.event.inputs.logLevel }}"
+          echo "Tags: ${{ github.event.inputs.tags }}"
       - name: Publish
         run: |
           git config --global user.name 'Rui Araújo'
