--- a/packages/eslint-react/package.json
+++ b/packages/eslint-react/package.json
@@ -13,8 +13,12 @@
   },
   "keywords": [],
   "license": "ISC",
-  "main": "src/index.js",
   "name": "@rekstack/eslint-react",
+  "repository": {
+    "directory": "packages/eslint-react",
+    "type": "git",
+    "url": "https://github.com/RekStack/config.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
