--- a/package.json
+++ b/package.json
@@ -16,7 +16,17 @@
   },
   "type": "module",
   "packageManager": "pnpm@9.6.0",
-  "scripts": {
+  "exports": {
+    "./eslint-react": {
+      "import": {
+        "default": "./packages/eslint-react/src/index.js"
+      }
+    },
+    "./eslint-react/package.json": "./packages/eslint-react/package.json",
+    "./package.json": "./package.json"
+  },
+  "scripts": {    
+    "build": "publint --strict",
     "cipublish": "node scripts/publish.js"
   },
   "keywords": [
