--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -6,16 +6,16 @@ on:
 
 jobs:
   bump-version:
-    if: '!startsWith(github.event.head_commit.message, "bump:")'
+    if: ${{!startsWith(github.event.head_commit.message, 'bump:') && github.repository_owner == 'RekStack'}}
     runs-on: ubuntu-latest
     name: 'Bump version and create changelog with commitizen'
     steps:
       - name: Check out
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          token: '${{ secrets.GITHUB_TOKEN  }}'
+          token: '${{ secrets.PERSONAL_ACCESS_TOKEN }}'
           fetch-depth: 0
       - name: Create bump and changelog
         uses: commitizen-tools/commitizen-action@master
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN  }}
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
