feat(eslint): add tanstack eslint config

--- a/packages/eslint-react/package.json
+++ b/packages/eslint-react/package.json
@@ -3,6 +3,9 @@
     "name": "Rui Araújo"
   },
   "description": "",
+  "devDependencies": {
+    "eslint": "8.57.0"
+  },
   "exports": {
     ".": {
       "import": {
