--- a/packages/eslint-react/package.json
+++ b/packages/eslint-react/package.json
@@ -4,7 +4,11 @@
   },
   "description": "",
   "devDependencies": {
-    "eslint": "8.57.0"
+    "@eslint/js": "^9.8.0",
+    "eslint": "9.8.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
+    "typescript-eslint": "^8.0.0"
   },
   "exports": {
     ".": {
