--- a/packages/eslint-react/package.json
+++ b/packages/eslint-react/package.json
@@ -28,5 +28,8 @@
   },
   "sideEffects": false,
   "type": "module",
-  "version": "1.0.0-beta.1"
+  "version": "1.0.0-beta.1",
+  "peerDependencies": {
+    "typescript-eslint": "^8.0.0"
+  }
 }
