--- a/packages/eslint-react/package.json
+++ b/packages/eslint-react/package.json
@@ -2,14 +2,14 @@
   "author": {
     "name": "Rui Araújo"
   },
-  "description": "",
-  "devDependencies": {
+  "dependencies": {
     "@eslint/js": "^9.8.0",
     "eslint": "9.8.0",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "typescript-eslint": "^8.0.0"
   },
+  "description": "RekStack ESLint react config",
   "exports": {
     ".": {
       "import": {
@@ -18,7 +18,10 @@
     },
     "./package.json": "./package.json"
   },
-  "keywords": [],
+  "keywords": [
+    "eslint",
+    "react"
+  ],
   "license": "ISC",
   "name": "@rekstack/eslint-react",
   "repository": {
