--- a/packages/eslint-react/package.json
+++ b/packages/eslint-react/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@eslint/js": "^9.8.0",
     "eslint": "9.8.0",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-unused-imports": "^4.0.1",
     "globals": "^15.9.0",
     "typescript-eslint": "^8.0.0"
   },
