fix(eslint): apply fixup to yet unsuported plugin

--- a/packages/prettier/package.json
+++ b/packages/prettier/package.json
@@ -28,5 +28,8 @@
   },
   "sideEffects": false,
   "type": "module",
-  "version": "1.0.0-beta.11"
+  "version": "1.0.0-beta.11",
+  "devDependencies": {
+    "@eslint/compat": "^1.1.1"
+  }
 }
