fix(eslint): missing dep

--- a/packages/eslint-react/package.json
+++ b/packages/eslint-react/package.json
@@ -12,6 +12,9 @@
     "typescript-eslint": "^8.0.0"
   },
   "description": "RekStack ESLint react config",
+  "devDependencies": {
+    "@eslint/compat": "^1.1.1"
+  },
   "exports": {
     ".": {
       "import": {
