--- a/packages/prettier/package.json
+++ b/packages/prettier/package.json
@@ -28,8 +28,5 @@
   },
   "sideEffects": false,
   "type": "module",
-  "version": "1.0.0-beta.13",
-  "devDependencies": {
-    "@eslint/compat": "^1.1.1"
-  }
+  "version": "1.0.0-beta.13"
 }
