--- a/packages/eslint-react/package.json
+++ b/packages/eslint-react/package.json
@@ -3,6 +3,7 @@
     "name": "Rui Araújo"
   },
   "dependencies": {
+    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
     "eslint": "9.8.0",
     "eslint-plugin-jsx-a11y": "^6.9.0",
@@ -12,9 +13,6 @@
     "typescript-eslint": "^8.0.0"
   },
   "description": "RekStack ESLint react config",
-  "devDependencies": {
-    "@eslint/compat": "^1.1.1"
-  },
   "exports": {
     ".": {
       "import": {
