--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/RekStack/config.git"
+    "url": "git+https://github.com/RekStack/config.git"
   },
   "funding": {
     "type": "github",
