--- a/packages/eslint-react/package.json
+++ b/packages/eslint-react/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.8.0",
+    "@tanstack/eslint-plugin-query": "^5.56.1",
     "eslint": "9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
