--- a/packages/prettier/package.json
+++ b/packages/prettier/package.json
@@ -25,6 +25,11 @@
     "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0"
   },
+  "peerDependencies": {
+    "prettier": "^3",
+    "@ianvs/prettier-plugin-sort-imports": "^4",
+    "prettier-plugin-organize-imports": "^4"
+  },
   "exports": {
     ".": {
       "import": {
